--- a/app/src/main/res/layout/recycle_item_pokemon.xml
+++ b/app/src/main/res/layout/recycle_item_pokemon.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -8,21 +9,35 @@
             type="com.hi.dhl.pokemon.model.PokemonListModel" />
     </data>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
+        app:cardUseCompatPadding="true">
 
-        <ImageView
-            android:id="@+id/avator"
-            android:layout_width="@dimen/recycle_item_avrtor"
-            android:layout_height="@dimen/recycle_item_avrtor" />
-
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/itemBgView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{pokemon.name}" />
-    </LinearLayout>
+            android:background="@drawable/ripple_list_item_bg"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/avator"
+                android:layout_width="@dimen/recycle_item_avrtor"
+                android:layout_height="@dimen/recycle_item_avrtor"
+                android:layout_marginTop="@dimen/recycle_item_base_margin" />
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/recycle_item_base_margin"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="@{pokemon.name}"
+                android:textColor="@android:color/background_dark" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
 </layout>
