--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-    <dimen name="card_vertical_height">60dp</dimen>
-    <dimen name="recycle_item_avrtor">30dp</dimen>
+    <dimen name="card_vertical_height">100dp</dimen>
+    <dimen name="recycle_item_avrtor">100dp</dimen>
+    <dimen name="recycle_item_base_margin">10dp</dimen>
 </resources>
