--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#FA6555</color>
+    <color name="colorPrimaryDark">#FA6555</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="recycle_item_press">#9FB6B6B6</color>
+    <color name="lightTeal">#2CDAB1</color>
+    <color name="white_56">#8effffff</color>
+    <color name="color_progress_bg">#FFDBDBDB</color>
+    <color name="color_progress_secondary_bg">#80C07AB8</color>
+    <color name="color_progress_1">#d5429a</color>
+    <color name="color_progress_2">#f99655</color>
+    <color name="color_progress_3">#6ebb83</color>
+    <color name="color_progress_4">#f9cb75</color>
+    <color name="color_progress_5">#7ba7f2</color>
+
+    <color name="white">#FFFFFF</color>
+
+    <color name="black">#303943</color>
+    <color name="blue">#429BED</color>
+    <color name="brown">#B1736C</color>
+    <color name="grey">#303943</color>
+    <color name="indigo">#6C79DB</color>
+    <color name="lightBlue">#58ABF6</color>
+    <color name="lightBrown">#CA8179</color>
+    <color name="lighterGrey">#F4F5F4</color>
+    <color name="lightGrey">#F5F5F5</color>
+    <color name="lightPurple">#9F5BBA</color>
+    <color name="lightRed">#F7786B</color>
+    <color name="lightYellow">#FFCE4B</color>
+    <color name="purple">#7C538C</color>
+    <color name="red">#FA6555</color>
+    <color name="teal">#4FC1A6</color>
+    <color name="yellow">#F6C747</color>
+
+
+    <color name="contentBackground">#FFF</color>
+    <color name="tintImage">#41000000</color>
+    <color name="text">#ffffff</color>
+    <color name="azure">#49A9DF</color>
+    <color name="cerulean_blue">#137AE2</color>
 </resources>
