--- a/app/src/main/res/layout/motion_coordinatorlayout_header.xml
+++ b/app/src/main/res/layout/motion_coordinatorlayout_header.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:minHeight="40dp"
-    app:layoutDescription="@xml/scene_11_header"
+    app:layoutDescription="@xml/scene_header"
     app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">
 
 
@@ -49,7 +49,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        app:shapeAppearanceOverlay="@style/circleImageView"
         app:layout_constraintBottom_toTopOf="@+id/name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -57,7 +56,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.24000001"
         app:layout_constraintVertical_chainStyle="packed"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:shapeAppearanceOverlay="@style/circleImageView"
+        app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
         android:id="@+id/textView"
