--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -67,7 +67,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/avator"
                 tools:text="pokemon" />
 
-            <com.hi.dhl.jcustomvie.JProgressView
+            <com.hi.dhl.jprogressview.JProgressView
                 android:id="@+id/progressHp"
                 android:layout_width="match_parent"
                 android:layout_height="18dp"
@@ -194,7 +194,7 @@
                     tools:text="200/1000" />
 
 
-                <com.hi.dhl.jcustomvie.JProgressView
+                <com.hi.dhl.jprogressview.JProgressView
                     android:id="@+id/porgressAttack"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
@@ -234,7 +234,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     tools:text="200/1000" />
 
-                <com.hi.dhl.jcustomvie.JProgressView
+                <com.hi.dhl.jprogressview.JProgressView
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:layout_below="@+id/speed"
@@ -274,7 +274,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     tools:text="200/1000" />
 
-                <com.hi.dhl.jcustomvie.JProgressView
+                <com.hi.dhl.jprogressview.JProgressView
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:layout_below="@+id/exp"
